# Blaze

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/core/: Cargo.toml
crates/core/src/: db.rs  defaults.rs  get_app_data.rs  lib.rs  tantivy.rs  types.rs  utils.rs  walker.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: indexed.rs  lib.rs  start.rs  watcher.rs
crates/ui/: Cargo.toml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
web/: index.html
web/src/: App.tsx  Explorer.tsx  main.tsx  styles.css
