[package]
name = "blaze-daemon"
version = "0.1.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
fsevent-stream = "0.2.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
rusqlite = "0.39.0"
blaze-core = {path = "../core"}